--- a/thesis.tex
+++ b/thesis.tex
@@ -265,7 +265,7 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 %\FloatBarrier
 
 
-\part{Contribution -- fMRI -- Testing the superposition principle in two-syllabic representations}
+\part{Contribution -- fMRI -- Testing the superposition principle in two-syllabic pseudoword representations}
 \cleardoublepage
 % Introduction to superposition principle and application to fMRI
 \input{part_II/chapter_1.tex}
